Add homepage header

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import './component.scss';
 @import url('../assets/style.css');
 @import url('../assets/responsive.css');
+@import url('./homepage.scss');
 
 body {
   margin: 0;
