--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,3 +1,60 @@
+@import './variables.scss';
+
 .homepage-header {
   background-color: black;
+
+  .navbar {
+    padding: 1rem 3rem;
+    padding-top: 2.5rem;
+
+    @media (max-width: 767.98px) {
+      padding: 1rem 0.5rem;
+    }
+
+    .icons {
+      display: flex;
+      align-items: center;
+      height: 100%;
+
+      .nav-link {
+        letter-spacing: 1.1px;
+
+        @media (max-width: 767.98px) {
+          padding: .1rem;
+        }
+      }
+    }
+
+    .ant-avatar {
+      border: 1px solid;
+      border-color: $orange-100;
+      box-shadow: 0px 0px 10px $orange-100;
+    }
+  }
+
+
+//  //@media (max-width: 575.98px) {}
+//  //@media (min-width: 576px) and (max-width: 767.98px) {}
+//  @media (max-width: 767.98px) {
+//
+//  }
+//  //@media (min-width: 768px) and (max-width: 991.98px) {
+//  //
+//  //}
+//  //@media (min-width: 992px) and (max-width: 1199.98px) {}
+//  //@media (min-width: 1200px) {}
+}
+
+.homepage-hero {
+  background: url('../assets/images/homepage_hero.png');
+  height: 630px;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  .button-wrapper {
+    button {
+      border-radius: 40px;
+      text-transform: uppercase;
+    }
+  }
 }
