--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -458,3 +458,53 @@ a.card-link {
 .ant-collapse-content-box img {
   max-width: 94%;
 }
+
+/* ===== Font Size Start ===== */
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+@mixin text-gradient($gradient) {
+  background-image: $gradient;
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+/* ===== Font Size End ===== */
+
+/* ===== CSS For "The Swiper" Starts Here ===== */
+.swiper-container {
+  min-height: 200px;
+
+  .swiper-pagination {
+    text-align: right;
+    padding-right: 5%;
+
+    &-bullet {
+      --swiper-theme-color: white;
+      border-radius: 0;
+      padding: 0 25px;
+      bottom: 16%;
+      height: 4px;
+    }
+  }
+}
+/* ===== CSS For "The Swiper" End ===== */
