--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './base.scss';
 
 .homepage-header {
   background-color: black;
@@ -46,15 +47,55 @@
 }
 
 .homepage-hero {
-  background: url('../assets/images/homepage_hero.png');
-  height: 630px;
-  background-repeat: no-repeat;
-  background-size: cover;
+  .hero-slide {
+    &__image {
+      img {
+        width: 100%;
+        height: 600px;
+        object-fit: cover;
+      }
+    }
 
-  .button-wrapper {
-    button {
-      border-radius: 40px;
-      text-transform: uppercase;
+    &__content {
+      position: absolute;
+      bottom: 20%;
+      left: 7%;
+      color: white;
+
+      .subtitle {
+        font-size: 19px;
+        line-height: 30px;
+      }
+
+      .title {
+        font-size: 52px;
+        line-height: 44px ;
+        color: white;
+      }
+
+      .links {
+        display: flex;
+        align-items: center;
+
+        a {
+          // Using global text-gradient mixin
+          @include text-gradient(linear-gradient(95.35deg, #FFC450 -38.07%, #FF7E3E 157.57%));
+          font-size: 16px;
+          line-height: 21px;
+          font-weight: 600;
+        }
+      }
+
+      .description {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 21px;
+        width: 418px;
+      }
+
+      &-action {
+        text-transform: uppercase;
+      }
     }
   }
 }
