--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -37,5 +37,8 @@ $blue-2: #062c79;
 $blue-3: #1890ff;
 
 $orange-100: #f0b87c;
+$orange-200: #FF7E3D;
 $orange-primary: #EF854E;
 $citrus: linear-gradient(95.35deg, #FFC450 -38.07%, #FF7E3E 157.57%, red);
+
+$border-radius-base: 16px;
