--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -250,5 +250,45 @@
       text-align: center;
     }
   }
+
+  &-footer {
+    padding: 0 7%;
+
+    .collapse-wrapper {
+      &__header {
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 15px;
+        /* identical to box height, or 125% */
+
+        letter-spacing: 1px;
+        text-transform: uppercase;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+
+    .links {
+      color: white;
+
+      &-title {
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+      }
+
+      &-item {
+        opacity: 0.7;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: white;
+      }
+    }
+  }
 }
 
