--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -2,7 +2,11 @@
 @import './base.scss';
 
 .homepage {
-  background: #1b1e21;
+  background: url("../assets/images/homepage/background.png") no-repeat center center;
+  background-size: 100% 100%;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
 
   &-header {
     background-color: black;
@@ -77,12 +81,24 @@
         .subtitle {
           font-size: 19px;
           line-height: 30px;
+
+          @media (max-width: 767.98px) {
+            font-size: 14px;
+            line-height: 30px;
+            letter-spacing: 0.18px;
+          }
         }
 
         .title {
           font-size: 52px;
           line-height: 44px ;
           color: white;
+
+          @media (max-width: 767.98px) {
+            font-size: 24px;
+            line-height: 44px;
+            letter-spacing: 0.18px;
+          }
         }
 
         .links {
@@ -102,7 +118,14 @@
           font-weight: 600;
           font-size: 16px;
           line-height: 21px;
-          width: 418px;
+          width: 40%;
+
+          @media (max-width: 767.98px) {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 21px;
+            width: 70%;
+          }
         }
 
         &-action {
@@ -111,7 +134,22 @@
           button {
             width: 130px;
             height: 46px;
+
+            @media (max-width: 767.98px) {
+              width: 90px;
+              height: 35px;
+              font-weight: bold;
+              font-size: 10px;
+            }
           }
+        }
+      }
+    }
+
+    .swiper-container {
+      .swiper-pagination {
+        @media (max-width: 767.98px) {
+          display: none !important;
         }
       }
     }
@@ -128,17 +166,39 @@
       &__item {
         display: flex;
         align-items: center;
+        padding: 1.5rem;
+
+        @media (max-width: 767.98px) {
+          padding: 0.5rem;
+        }
 
         span {
           font-weight: 600;
           font-size: 24px;
           line-height: 44px;
           letter-spacing: 0.18px;
+
+          @media (max-width: 767.98px) {
+            font-size: 16px;
+            text-align: center;
+          }
         }
 
         img {
-          width: 125px;
-          height: 40px;
+          width: 100px;
+          height: 90px;
+
+          @media (min-width: 768px) and (max-width: 1199.98px) {
+            width: 90px;
+            height: 60px;
+          }
+
+          @media (max-width: 767.98px) {
+            width: 30px;
+            height: 30px;
+            word-break: break-all;
+            text-align: center;
+          }
         }
       }
     }
@@ -158,7 +218,13 @@
         letter-spacing: 0.18px;
         text-transform: uppercase;
         padding: 0;
-        margin: 0;
+        margin-right: 3rem;
+
+        @media (max-width: 767.98px) {
+          font-weight: bold;
+          font-size: 12px;
+          margin-right: 4px;
+        }
       }
 
       a {
@@ -168,6 +234,11 @@
 
         &:hover {
           color: $orange-100;
+        }
+
+        @media (max-width: 767.98px) {
+          font-weight: bold;
+          font-size: 12px;
         }
       }
 
@@ -203,15 +274,36 @@
               font-size: 20px;
               line-height: 20px;
               letter-spacing: 0.18px;
+
+              @media (max-width: 767.98px) {
+                font-weight: 600;
+                font-size: 11px;
+                line-height: 20px;
+                letter-spacing: 0.18px;
+                margin-bottom: 2px;
+              }
             }
             .description {
               font-size: 14px;
               line-height: 14px;
               letter-spacing: 0.18px;
+              font-style: normal;
+
+              @media (max-width: 767.98px) {
+                font-weight: normal;
+                font-size: 8px;
+                line-height: 14px;
+                letter-spacing: 0.18px;
+                margin-bottom: 2px;
+              }
             }
           }
 
           svg {
+            @media (max-width: 767.98px) {
+              width: .5rem;
+              height: .5rem;
+            }
             &:hover {
               cursor: pointer;
             }
@@ -232,6 +324,11 @@
   &-quote {
     display: flex;
     justify-content: center;
+    padding: 3rem 0;
+
+    @media (max-width: 767.98px) {
+      padding: 1.5rem 0;
+    }
 
     &__wrapper {
       width: 100%;
@@ -248,11 +345,28 @@
       color: white;
       margin: 20px 7%;
       text-align: center;
+
+      @media (max-width: 767.98px) {
+        font-weight: 600;
+        font-size: 11px;
+        line-height: 21px;
+        letter-spacing: 0.18px;
+      }
+
+      .author {
+        opacity: 0.7;
+        margin-top: 1.5rem;
+
+        @media (max-width: 767.98px) {
+          margin-top: .5rem;
+        }
+      }
     }
   }
 
   &-footer {
     padding: 0 7%;
+    background-color: #14171D;
 
     .collapse-wrapper {
       &__header {
@@ -287,6 +401,10 @@
         font-size: 16px;
         line-height: 24px;
         color: white;
+
+        @media (max-width: 767.98px) {
+          width: 92%;
+        }
       }
     }
   }
