Add background color for support pages

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -93,7 +93,7 @@
 .bg-linear {
   position: absolute;
   width: 100%;
-  height: 30g3px;
+  height: 303px;
   left: 0;
   bottom: 0;
   background: linear-gradient(180deg, #ffc700 0%, #f98600 0.15%, rgba(0, 0, 0, 0) 60%);
