--- a/src/containers/support/style.scss
+++ b/src/containers/support/style.scss
@@ -178,6 +178,8 @@
         background-color: white;
         padding-bottom: 50px;
         z-index: 10;
+        position: relative;
+        box-shadow: 0px 0px 100px #eda760;
     }
 
     &-setting {
@@ -235,12 +237,13 @@
         position: relative;
     }
 
-    .ant-input,.form-control {
-        background-color: #F6F7FA;
+    .ant-input,
+    .form-control {
+        background-color: #f6f7fa;
     }
 }
 
-.ant-form-item-label>label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
+.ant-form-item-label > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
     position: absolute;
     right: -20px;
 }
@@ -264,7 +267,7 @@
 }
 
 .ant-radio-checked .ant-radio-inner:after {
-    background-color: #EF854E;
+    background-color: #ef854e;
 }
 
 #month,
@@ -272,7 +275,7 @@
 #year {
     width: 100%;
     padding: 4px 2px;
-    background-color: #F6F7FA;
+    background-color: #f6f7fa;
     border: 1px solid #d9d9d9;
     border-radius: 2px;
 }
@@ -280,7 +283,7 @@
 @media only screen and (max-width: 767px) {
     .support {
         &-ava {
-            &>img {
+            & > img {
                 width: 105px;
                 height: 105px;
             }
